syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Sanctuary.Census.RealtimeHub";

package realtime;

service RealtimeIngress {
  rpc RequestZoneConnection(ZoneConnectionRequest) returns (ZoneConnectionResponse);
  rpc SubmitMapStateUpdate(MapStateUpdate) returns (Ok);
  rpc SubmitWorldPopulationUpdate(WorldPopulationUpdate) returns (Ok);
  rpc SubmitOutfitWarRegistrationsUpdate(OutfitWarRegistrationsUpdate) returns (Ok);
}

message Ok {
}

message ZoneConnectionRequest {
  int32 ServerId = 1;
  string AccountName = 2;
}

message ZoneConnectionResponse {
  string ClientProtocolString = 1;
  string ClientVersion = 2;
}

message ZoneConnectionDetails {
  string account_username = 1;
  string account_password = 2;
  google.protobuf.StringValue login_session_token = 3;
  google.protobuf.Timestamp login_start_at = 4;
  string client_protocol_string = 5;
  string client_version = 6;
  uint32 world_id = 7;
}

message ZoneConnectionClosed {
  google.protobuf.StringValue login_session_token = 1;
}

message MapStateUpdate {
  uint32 world_id = 1;
  int32 zone_id = 2;
  int32 zone_instance = 3;
  google.protobuf.Timestamp timestamp = 4;
  repeated MapRegionState regions = 5;
}

message MapRegionState {
  uint32 map_region_id = 1;
  int32 owning_faction_id = 2;
  int32 contesting_faction_id = 3;
  int32 capture_time_ms = 4;
  int32 remaining_capture_time_ms = 5;
  int32 ctf_flags = 6;
  int32 remaining_ctf_flags = 7;
  map<int32, int32> faction_population_upper_bound = 8;
  map<int32, float> faction_population_percentage = 9;
}

message OutfitWarRegistrationsUpdate {
  uint32 world_id = 1;
  uint32 outfit_war_id = 2;
  repeated OutfitWarRegistration registrations = 3;
}

message OutfitWarRegistration {
  uint64 outfit_id = 1;
  uint32 faction_id = 2;
  uint32 registration_order = 3;
  uint32 status = 4;
  uint32 member_signup_count = 5;
}

message WorldPopulationUpdate {
  uint32 world_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  map<int32, int32> faction_populations = 3;
}
